replace jersey with avaje